kubernetes/applications/seafile/seafile-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: seafile
  name: seafile
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: seafile
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:11.0-latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "1000Mi"
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-pvc
