kubernetes/applications/seafile/seafile-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: 188.155.74.203
  labels:
    app.kubernetes.io/name: seafile
  name: seafile
  namespace: seafile
spec:
  ingressClassName: nginx
  rules:
  - host: drive.lilalala.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: seafile
            port:
              name: http
  tls:
  - hosts:
    - drive.lilalala.com
    secretName: seafile-tls
